--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,7 @@ cmake_minimum_required(VERSION 3.8)
 project(rune)
 
 set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_C_STANDARD 17)
 
 # include the directories include and dependencies/CppHttp/include
 include_directories(include dependencies/CppHttp/include)
