Add MODEL and FIELD macros

--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -24,7 +24,7 @@ include_directories("../dependencies/CppHttp/include")
 add_library(server SHARED server.cpp)
 
 if (WIN32)
-	set_target_properties(server PROPERTIES OUTPUT_NAME "libserver")
+	set_target_properties(server PROPERTIES OUTPUT_NAME "server")
 else()
-	set_target_properties(server PROPERTIES OUTPUT_NAME "libserver")
+	set_target_properties(server PROPERTIES OUTPUT_NAME "server")
 endif()
