Add class generation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,8 +26,8 @@ include_directories(${PostgreSQL_INCLUDE_DIRS})
 include_directories(${OPENSSL_INCLUDE_DIR})
 include_directories(dependencies/soci/include)
 include_directories(include dependencies/CppHttp/include)
+include_directories(ORM/include)
 
-# recursiv  search for all files in the src directory
 file(GLOB_RECURSE SOURCES "src/*.cpp")
 
 add_executable(rune-cpp ${SOURCES})
@@ -37,6 +37,7 @@ target_link_libraries(rune-cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/dependencies/soci/lib/libsoci_core.a
   ${PostgreSQL_LIBRARIES}
   ${OPENSSL_LIBRARIES}
+  ${CMAKE_CURRENT_SOURCE_DIR}/ORM/out/libscrollorm.so
 )
 
 install(TARGETS rune-cpp DESTINATION bin)
