--- a/ORM/CMakeLists.txt
+++ b/ORM/CMakeLists.txt
@@ -19,6 +19,20 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE "${CMAKE_BINARY_DIR}")
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE "${CMAKE_BINARY_DIR}")
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE "${CMAKE_BINARY_DIR}")
 
+find_package(PostgreSQL REQUIRED)
+find_package(OpenSSL REQUIRED)
+
+include_directories(${PostgreSQL_INCLUDE_DIRS})
+include_directories(${OPENSSL_INCLUDE_DIR})
+include_directories(../dependencies/soci/include)
+
 add_library(ORM SHARED src/ScrollORM.cpp)
+
+target_link_libraries(ORM 
+  ${CMAKE_CURRENT_SOURCE_DIR}/../dependencies/soci/lib/libsoci_postgresql.a
+  ${CMAKE_CURRENT_SOURCE_DIR}/../dependencies/soci/lib/libsoci_core.a
+  ${PostgreSQL_LIBRARIES}
+  ${OPENSSL_LIBRARIES}
+)
 
 set_target_properties(ORM PROPERTIES OUTPUT_NAME "scrollorm")
